# Simple_RANSAC

./: CMakeLists.txt  Model.cpp  README.md  Ransac.cpp  Ransac.h  main.cpp
src/: Model.h  Ransac.cpp  main.cpp
